--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "hex-to-binary": "^1.0.1",
     "nodemon": "^2.0.21",
+    "path": "^0.12.7",
     "redis": "^2.8.0",
     "request": "^2.88.0"
   },
